--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -4,22 +4,22 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Incrave - Responsive Landing Template</title>
+        <title>Scott J Cohen</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Responsive Multipurpose Creative Landing Page Template" />
         <meta name="keywords" content="Bootstrap 5, SASS, Clean, Multipurpose, Responsive, Modern" />
         <meta content="Shreethemes" name="author" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- Icons -->
-        <link href="css/materialdesignicons.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/materialdesignicons.min.css' %}" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
         <!-- Main Css -->
         <!-- Custom Css -->
-        <link href="css/style.css" rel="stylesheet" type="text/css" id="theme-opt" />
-        <link href="css/colors/default.css" rel="stylesheet" id="color-opt">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" id="theme-opt" />
+        <link href="{% static 'css/colors/default.css' %}" rel="stylesheet" id="color-opt">
     </head>
 
     <body>
@@ -63,8 +63,8 @@
                 <!-- Logo container-->
                 <div>
                     <a class="logo" href="#">
-                        <img src="images/logo-dark.png" class="l-dark" height="21" alt="">
-                        <img src="images/logo-light.png" class="l-light" height="21" alt="">
+                        <img src="{% static 'images/logo-dark.png' %}" class="l-dark" height="21" alt="">
+                        <img src="{% static 'images/logo-light.png' %}" class="l-light" height="21" alt="">
                     </a>
                 </div> 
                 <!-- End Logo container-->
@@ -285,7 +285,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="me-lg-4">
-                            <img src="images/about/hero.jpg" class="img-fluid rounded" alt="">
+                            <img src="{% static 'images/about/hero.jpg' %}" class="img-fluid rounded" alt="">
                         </div>
                     </div><!--end col-->
 
@@ -341,7 +341,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                         <div class="team text-center rounded position-relative overflow-hidden">
                             <div class="position-relative overflow-hidden">    
-                                <img src="images/client/01.jpg" class="img-fluid" alt="">
+                                <img src="{% static 'images/client/01.jpg' %}" class="img-fluid" alt="">
                                 <ul class="list-unstyled team-social social-icon social mb-0 bg-dark pt-2">
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="facebook" class="fea icon-sm fea-social"></i></a></li>
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="instagram" class="fea icon-sm fea-social"></i></a></li>
@@ -360,7 +360,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                         <div class="team text-center rounded position-relative overflow-hidden">
                             <div class="position-relative overflow-hidden">    
-                                <img src="images/client/02.jpg" class="img-fluid" alt="">
+                                <img src="{% static 'images/client/02.jpg' %}" class="img-fluid" alt="">
                                 <ul class="list-unstyled team-social social-icon social mb-0 bg-dark pt-2">
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="facebook" class="fea icon-sm fea-social"></i></a></li>
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="instagram" class="fea icon-sm fea-social"></i></a></li>
@@ -379,7 +379,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                         <div class="team text-center rounded position-relative overflow-hidden">
                             <div class="position-relative overflow-hidden">    
-                                <img src="images/client/03.jpg" class="img-fluid" alt="">
+                                <img src="{% static 'images/client/03.jpg' %}" class="img-fluid" alt="">
                                 <ul class="list-unstyled team-social social-icon social mb-0 bg-dark pt-2">
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="facebook" class="fea icon-sm fea-social"></i></a></li>
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="instagram" class="fea icon-sm fea-social"></i></a></li>
@@ -398,7 +398,7 @@
                     <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                         <div class="team text-center rounded position-relative overflow-hidden">
                             <div class="position-relative overflow-hidden">    
-                                <img src="images/client/04.jpg" class="img-fluid" alt="">
+                                <img src="{% static 'images/client/04.jpg' %}" class="img-fluid" alt="">
                                 <ul class="list-unstyled team-social social-icon social mb-0 bg-dark pt-2">
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="facebook" class="fea icon-sm fea-social"></i></a></li>
                                     <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="instagram" class="fea icon-sm fea-social"></i></a></li>
@@ -451,7 +451,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-12 mb-0 mb-md-4 pb-0 pb-md-2">
                         <a class="logo-footer" href="#">
-                            <img src="images/logo-light.png" height="21" alt="">
+                            <img src="{% static 'images/logo-light.png' %}" height="21" alt="">
                         </a>
                         <p class="mt-4">Build responsive, mobile-first projects on the web with the world's most popular front-end component library.</p>
                     </div><!--end col-->
@@ -592,15 +592,15 @@
         
 
         <!-- Javascript -->
-        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <!-- Parallax -->
-        <script src="js/parallax.js"></script> 
+        <script src="{% static 'js/parallax.js' %}"></script> 
         <!-- Feather icon -->
-        <script src="js/feather.min.js"></script>
-        <script src="https://unicons.iconscout.com/release/v3.0.6/script/monochrome/bundle.js"></script>
+        <script src="{% static 'js/feather.min.js' %}"></script>
+        <script src="{% static 'https://unicons.iconscout.com/release/v3.0.6/script/monochrome/bundle.js' %}"></script>
         
         <!-- Main Js -->
-        <script src="js/app.js"></script>
+        <script src="{% static 'js/app.js' %}"></script>
     </body>
 
 </html>
