--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -19,7 +19,7 @@
         <!-- Main Css -->
         <!-- Custom Css -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" id="theme-opt" />
-        <link href="{% static 'css/colors/default.css' %}" rel="stylesheet" id="color-opt">
+        <link href="{% static 'css/colors/skyblue.css' %}" rel="stylesheet" id="color-opt">
     </head>
 
     <body>
@@ -85,95 +85,18 @@
                 <div id="navigation">
                     <!-- Navigation Menu-->   
                     <ul class="navigation-menu nav-light">
-                        <li><a href="index.html" class="sub-menu-item">Overview</a></li>
-                        <li class="has-submenu parent-menu-item">
-                            <a href="javascript:void(0)">Landing</a><span class="menu-arrow"></span>
-                            <ul class="submenu">
-                                <li><a href="index-social-marketing.html" class="sub-menu-item">Social Media</a></li>
-                                <li><a href="index-online-learning.html" class="sub-menu-item">Online Course</a></li>
-                                <li><a href="index-coworking.html" class="sub-menu-item">Co-Working Space</a></li>
-                                <li><a href="index-digital-marketing.html" class="sub-menu-item">Digital Marketing</a></li>
-                                <li><a href="index-job.html" class="sub-menu-item">Job & Careers</a></li>
-                                <li><a href="index-travel.html" class="sub-menu-item">Travel Agency</a></li>
-                                <li><a href="index-charity.html" class="sub-menu-item">Charity & Helping Hands</a></li>
-                                <li><a href="index-cloud-hosting.html" class="sub-menu-item">Cloud Hosting</a></li>
-                                <li><a href="index-minimal-portfolio.html" class="sub-menu-item">Minimal Portfolio</a></li>
-                                <li><a href="index-startup-business.html" class="sub-menu-item">Startup Business</a></li>
-                            </ul>
-                        </li>
-        
-                        <li class="has-submenu parent-parent-menu-item">
-                            <a href="javascript:void(0)">Pages</a><span class="menu-arrow"></span>
-                            <ul class="submenu">
-                                <li><a href="page-about.html" class="sub-menu-item"> About Us</a></li>
-                                <li><a href="page-services.html" class="sub-menu-item">Services</a></li>
-                                <li><a href="page-pricing.html" class="sub-menu-item">Pricing</a></li>
-                                <li><a href="page-team.html" class="sub-menu-item"> Team</a></li>
-                                <li><a href="page-faq.html" class="sub-menu-item"> F.A.Q</a></li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)"> Careers</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-job-grid.html" class="sub-menu-item">Job Grid</a></li>
-                                        <li><a href="page-job-listing.html" class="sub-menu-item">Job Listing</a></li>
-                                        <li><a href="page-job-detail.html" class="sub-menu-item">Job Details</a></li>
-                                        <li><a href="page-job-apply.html" class="sub-menu-item">Job Apply Form</a></li>
-                                        <li><a href="page-job-company.html" class="sub-menu-item">Company Details</a></li>
-                                        <li><a href="page-job-candidate.html" class="sub-menu-item">Candidate Details</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)"> User</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-login.html" class="sub-menu-item">Login</a></li>
-                                        <li><a href="page-signup.html" class="sub-menu-item">Sign Up</a></li>
-                                        <li><a href="page-reset-password.html" class="sub-menu-item">Forgot Password</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)"> Special</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-comingsoon.html" class="sub-menu-item">Coming Soon</a></li>
-                                        <li><a href="page-maintenance.html" class="sub-menu-item">Maintenance</a></li>
-                                        <li><a href="page-404.html" class="sub-menu-item">404 Error</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)"> Contact</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="contact-simple.html" class="sub-menu-item">Simple</a></li>
-                                        <li><a href="contact-creative.html" class="sub-menu-item">Creative</a></li>
-                                    </ul>  
-                                </li>
-                            </ul>
-                        </li>
-
+                        <li><a href="index.html" class="sub-menu-item">Home</a></li>
+                        <li><a href="index.html" class="sub-menu-item">About Me</a></li>
                         <li class="has-submenu parent-parent-menu-item">
                             <a href="javascript:void(0)">Portfolio</a><span class="menu-arrow"></span>
                             <ul class="submenu">
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)">Work Gird</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-work-grid.html" class="sub-menu-item">Grid Boxed</a></li>
-                                        <li><a href="page-work-grid-full.html" class="sub-menu-item">Grid Full</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)">Work Classic</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-work-classic.html" class="sub-menu-item">Classic Boxed</a></li>
-                                        <li><a href="page-work-classic-full.html" class="sub-menu-item">Classic Full</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)">Work Modern</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-work-modern.html" class="sub-menu-item">Modern Boxed</a></li>
-                                        <li><a href="page-work-modern-full.html" class="sub-menu-item">Modern Full</a></li>
-                                    </ul>  
-                                </li>
-                                <li class="has-submenu parent-menu-item"><a href="javascript:void(0)">Work Masonry</a><span class="submenu-arrow"></span>
-                                    <ul class="submenu">
-                                        <li><a href="page-work-masonry.html" class="sub-menu-item">Masonry Boxed</a></li>
-                                        <li><a href="page-work-masonry-full.html" class="sub-menu-item">Masonry Full</a></li>
-                                    </ul>  
-                                </li>
-                                <li><a href="page-work-details.html" class="sub-menu-item">Work Details</a></li>
+                                <li><a href="page-blog.html" class="sub-menu-item">The Collection</a></li>
+                                <li><a href="page-blog-sidebar.html" class="sub-menu-item">Akko Technologies</a></li>
+                                <li><a href="page-blog-detail.html" class="sub-menu-item">Stove Spy</a></li>
+                                <li><a href="page-blog-detail2.html" class="sub-menu-item">Polaxio</a></li>
+                                <li><a href="page-blog-detail2.html" class="sub-menu-item">Nocktua</a></li>
                             </ul>
                         </li>
-
                         <li class="has-submenu parent-parent-menu-item">
                             <a href="javascript:void(0)">Blogs</a><span class="menu-arrow"></span>
                             <ul class="submenu">
@@ -183,7 +106,6 @@
                                 <li><a href="page-blog-detail2.html" class="sub-menu-item">Blog Details Two</a></li>
                             </ul>
                         </li>
-                        <li><a href="components.html" class="sub-menu-item">Components</a></li>
                     </ul><!--end navigation menu-->
                     
                     <ul class="list-unstyled small-tagline d-none mb-0">
@@ -216,13 +138,13 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="title-heading text-center">
-                            <h3 class="font-weight-normal text-white mb-4"> We're a Creative Agency </h3>
+                            <h3 class="font-weight-normal text-white mb-4"> I am a burdgeoning Python developer with an interest in machine learning applications.</h3>
                             <div class="page-next-level">
                                 <ul class="page-next mb-0 px-0">
                                     <li class="list-inline-item icon-light me-1"><a href="index.html" class="text-white pe-2">Home</a></li>
                                     <li class="list-inline-item icon-light me-1"><a href="#" class="text-white pe-2">Pages</a></li> 
                                     <li class="list-inline-item me-1">
-                                        <span class="text-primary pe-2">About Us</span> 
+                                        <span class="text-primary pe-2">About Me</span> 
                                     </li> 
                                 </ul>
                             </div>
@@ -239,8 +161,8 @@
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="section-title text-center mb-4 pb-2">
-                            <h4 class="title mb-4">What we do ?</h4>
-                            <p class="text-muted para-desc mx-auto mb-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                            <h4 class="title mb-4">What I do ?</h4>
+                            <p class="text-muted para-desc mx-auto mb-0">I work with primarily with Python and SQL to bring data driven projects to life. The work projects displayed on this website are intended to showcase my skills in Python based development and data science.</p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -249,10 +171,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                         <div class="feature feature-transition p-4 rounded">
                             <div class="icon text-center rounded-pill shadow">
-                                <i data-feather="slack" class="fea icon-m-md feature-icon text-primary"></i>
+                                <i data-feather="target" class="fea icon-m-md feature-icon text-primary"></i>
                             </div>
-                            <h5 class="mt-2">Vision</h5>
-                            <p class="text-muted">The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century.</p>
+                            <h5 class="mt-2">Goal</h5>
+                            <p class="text-muted">Primarily through self-instruction and self-guided projects, I am aiming to cultivate the necesasry skills to become a Python developer and demonstrate that ability to prospective employers.</p>
                             <a href="javascript:void(0)" class="text-primary">Read More <i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div><!--end col-->
@@ -260,10 +182,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                         <div class="feature feature-transition p-4 rounded">
                             <div class="icon text-center rounded-pill shadow">
-                                <i data-feather="pen-tool" class="fea icon-m-md feature-icon text-primary"></i>
+                                <i data-feather="package" class="fea icon-m-md feature-icon text-primary"></i>
                             </div>
-                            <h5 class="mt-2">Strategy</h5>
-                            <p class="text-muted">This ancient dummy text is also incomprehensible, but it rhythm of most European languages in Latin script.</p>
+                            <h5 class="mt-2">Python</h5>
+                            <p class="text-muted">I am cultivating skills in data retrieval, processing and analysis, descriptive and predictive model building, machine learning, computer vision and backend/ server side software structure. I have experience in the use of several Python libraries and frameworks, including: Numpy, Pandas, TensorFlow, Pytorch, Matplotlib, Seaborn, SciPy, Scikit-Learn, OpenCV, and Django. </p>
                             <a href="javascript:void(0)" class="text-primary">Read More <i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div><!--end col-->
@@ -271,10 +193,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                         <div class="feature feature-transition p-4 rounded">
                             <div class="icon text-center rounded-pill shadow">
-                                <i data-feather="crosshair" class="fea icon-m-md feature-icon text-primary"></i>
+                                <i data-feather="database" class="fea icon-m-md feature-icon text-primary"></i>
                             </div>
-                            <h5 class="mt-2">Mission</h5>
-                            <p class="text-muted">It seems that only fragments of the original text remain in the Lorem Ipsum rhythm of most texts used today.</p>
+                            <h5 class="mt-2">SQL</h5>
+                            <p class="text-muted">Experience in various database systems, including PostreSQL, MySQL, and SQLite. Also have some work with non-relational databases, including MongoDB and Redis.</p>
                             <a href="javascript:void(0)" class="text-primary">Read More <i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div><!--end col-->
