--- a/general/templates/general/index.html
+++ b/general/templates/general/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,20 +11,20 @@
         <meta name="keywords" content="Bootstrap 5, SASS, Clean, Multipurpose, Responsive, Modern" />
         <meta content="Shreethemes" name="author" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="{% static 'images/favicon-S.ico' %}">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- Tobii -->
-        <link href="css/tobii.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/tobii.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- Icons -->
-        <link href="css/materialdesignicons.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/materialdesignicons.min.css' %}" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
         <!-- Slider -->               
-        <link rel="stylesheet" href="css/tiny-slider.css"/> 
+        <link rel="stylesheet" href="{% static 'css/tiny-slider.css' %}"/> 
         <!-- Main Css -->
         <!-- Custom Css -->
-        <link href="css/style.css" rel="stylesheet" type="text/css" id="theme-opt" />
-        <link href="css/colors/default.css" rel="stylesheet" id="color-opt">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" id="theme-opt" />
+        <link href="{% static 'css/colors/skyblue.css' %}" rel="stylesheet" id="color-opt">
     </head>
 
     <body>
@@ -40,21 +41,6 @@
                                 <li class="list-inline-item me-2"><a href="javascript:void(0)" class="text-dark"><i data-feather="instagram" class="fea icon-sm"></i></a></li>
                                 <li class="list-inline-item"><a href="javascript:void(0)" class="text-dark"><i data-feather="twitter" class="fea icon-sm"></i></a></li>
                             </ul>
-                            
-                            <ul class="list-unstyled mb-0 px-0 tag-right">
-                                <li class="list-inline-item me-2">
-                                    <div class="mb-0">
-                                        <select class="form-select form-select-sm select-lang">
-                                            
-                                            <option value="4">English</option>
-                                            <option value="1">Spanish</option>
-                                            <option value="3">French</option>
-                                        </select>
-                                    </div>
-                                </li>
-                                <li class="list-inline-item me-2"><a href="javascript:void(0)" class="text-dark"><i data-feather="settings" class="fea icon-sm"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#LoginForm" class="text-dark"><i data-feather="user" class="fea icon-sm"></i></a></li>
-                            </ul>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -68,7 +54,7 @@
                 <!-- Logo container-->
                 <div>
                     <a class="logo" href="#">
-                        <img src="images/logo-dark.png" height="21" alt="">
+                        <img src="{% static 'images/logo-gray.svg' %}" height="75" alt="">
                     </a>
                 </div> 
                 <!-- End Logo container-->
@@ -733,20 +719,20 @@
         
 
         <!-- Javascript -->
-        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <!-- Shuffle Popup -->
-        <script src="js/shuffle.min.js"></script> 
-        <script src="js/tobii.min.js"></script> 
-        <script src="js/gallery.init.js"></script>
+        <script src="{% static 'js/shuffle.min.js' %}"></script> 
+        <script src="{% static 'js/tobii.min.js' %}"></script> 
+        <script src="{% static 'js/gallery.init.js' %}"></script>
         <!-- SLIDER -->
-        <script src="js/tiny-slider.js "></script>
-        <script src="js/tiny-slider-init.js "></script>
+        <script src="{% static 'js/tiny-slider.js' %}"></script>
+        <script src="{% static 'js/tiny-slider-init.js' %}"></script>
         <!-- Feather icon -->
-        <script src="js/feather.min.js"></script>
+        <script src="{% static 'js/feather.min.js' %}"></script>
         <script src="https://unicons.iconscout.com/release/v3.0.6/script/monochrome/bundle.js"></script>
         
         <!-- Main Js -->
-        <script src="js/app.js"></script>
+        <script src="{% static 'js/app.js' %}"></script>
 
         <script>
             const tobii = new Tobii()
